@@ -8,3 +8,4 @@
 * On error, no longer return codes 1-15, but instead return 1 and show the
   exception.
 * Instead of a YAML config, use an .ini config only.
+* Logging is only done to stdout, not to any file
